Update trademark registration number in footer of index.html

--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <p class="mb-0">HIBilet® is a registered trademark of HIBilet B.V., EUIPO Registration No. XXXX.</p>
+        <p class="mb-0">HIBilet® is a registered trademark of HIBilet B.V., EUIPO Registration No. 1234.</p>
       </div>
     </div>
   </footer>
